# operator

./: .gitignore  200.patch  CODEOWNERS  Dockerfile  Dockerfile.peerpods  Dockerfile.peerpods-libvirt  Makefile  PROJECT  README.md  bundle.Dockerfile  go.mod  go.sum  main.go  nginx.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ccruntime-nightly.yaml  ccruntime-pr.yaml  ccruntime_e2e.yaml  ccruntime_e2e_amd.yaml  docker-publish-latest-on-merge.yaml  docker-publish-latest-on-merge.yml  docker-publish-on-tag.yaml  docker-publish-on-tag.yml  docker-publish.yml  e2e.yaml  enclave-cc-cicd.yaml  enclave-cc-e2e.yaml  gofmt.yaml  golangci-lint.yaml  lib-codeql.yaml  makefile.yaml  makefile.yml  pre-install-image-publish-on-merge.yaml  pre-install-image-publish-on-merge.yml  runtime-payload-latest-tags.yaml
api/v1beta1/: ccruntime_types.go  confidentialcontainersruntime_types.go  groupversion_info.go  zz_generated.deepcopy.go
bundle/metadata/: annotations.yaml
configure-containerd/: Cargo.toml
configure-containerd/src/: main.rs
controllers/: ccruntime_controller.go  common.go  confidentialcontainersruntime_controller.go  suite_test.go
demo/: README.md  ccv0_helper.sh  nginx-deployment-cc.yaml  nginx-deployment-kata.yaml  nginx-deployment-qemu.yaml
deploy/: deploy.yaml
docs/: CI_next.md  DEVELOPMENT.md  INSTALL.md  OPERATOR_HUB.md  PAYLOAD_IMAGE.md  PEERPODS-TEST.md  PEERPODS.md
hack/: boilerplate.go.txt  release-helper-yaml-list.sh  release-helper.sh  update_ccruntime_images.sh
tests/: git-helper.sh
(+125 files in other folders)
