[package]
name = "configure-containerd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = "1.0.75"
# clap = { version = "4.4.11", features = ["derive"] }
# nix = "0.27.1"
toml_edit = "0.21.0"
